= 3.2.13 (not released yet)
- Fix destroy action, was broken in 3.2.12
- Remove default :method sorting for associations, it wasn't useful and can be slow

= 3.2.12
- improve support for tableless models, add support for count
- fix div id for nested scaffolds
- add config.timestamped_messages and config.highlight_messages
- Improve performance using class to check authorization for plural associations which are not loaded, and avoiding to load associations if it's not needed
- Fix using a scope in main form, it wasn't working for associations (for create multiple from active_scaffold_batch)
- Fix searches with no results, it was loading first page without conditions
- Allow to change highlight options with ActiveScaffold.js_config
- allow to override column count calculation for colspan
- Remove conditions_from_params from nested links
- Fix nested forms for singular associations
- enable to get constraints in helpers, so can be used in options_for_association_conditions, for example
- Allow to edit has_one :through association in nested forms
- Fix cancan bridge broken in a previous release
- Fix mark action

= 3.2.11
- improve support for tableless models and active_scaffold_batch
- fix count includes which were broken in 3.2.9
- remove duplicated conditions in nested scaffolds, added by conditions_from_params

= 3.2.10
- fix nested scaffolds with update action disabled
- initial work for tableless support (index with limited options)
- fix scrolling on closing nested scaffolds
- fix calculations which were broken in 3.2.9

= 3.2.9
- remove duplicated conditions with constraints
- fix constraints for polymorphic associations

= 3.2.8
- add deprecation for update_column, update_columns should be used instead
- fix constraints with hide_nested_column disabled in list and embedded scaffolds which are nested too
- fix setting a hash as includes, cannot be concat in finder
- add option to scroll on close only if element is not visible in viewport (default now)