@@ -1,6 +1,7 @@
 = 3.2.13 (not released yet)
 - Fix destroy action, was broken in 3.2.12
 - Remove default :method sorting for associations, it wasn't useful and can be slow
+- Rescue from ActiveScaffold::ActionNotAllowed and ActiveScaffold::RecordNotAllowed with 401 response, it can be overrided with deny_access method in ApplicationController.
 
 = 3.2.12
 - improve support for tableless models, add support for count
